<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/email_verification_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_status"
        android:layout_marginTop="16dp"
        android:text="@string/email_not_verified"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_resend"
        android:layout_marginTop="24dp"
        android:text="@string/resend_verification_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_check_status"
        android:layout_marginTop="16dp"
        android:text="@string/check_verification_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_width="48dp"
        android:layout_height="48dp"/>
</LinearLayout>
